--- a/LunarLander/LunarLander/LunarLander.vcxproj.filters
+++ b/LunarLander/LunarLander/LunarLander.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Sprite.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LanderInterface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Lander.h">
@@ -30,6 +33,9 @@
       <Filter>HeaderFiles</Filter>
     </ClInclude>
     <ClInclude Include="Sprite.h">
+      <Filter>HeaderFiles</Filter>
+    </ClInclude>
+    <ClInclude Include="LanderInterface.h">
       <Filter>HeaderFiles</Filter>
     </ClInclude>
   </ItemGroup>
