--- a/LunarLander/LunarLander/LunarLander.vcxproj
+++ b/LunarLander/LunarLander/LunarLander.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="LanderInterface.cpp" />
     <ClCompile Include="LandSite.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Mountains.cpp" />
     <ClCompile Include="Sprite.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -187,6 +188,8 @@
     <ClInclude Include="Lander.h" />
     <ClInclude Include="LanderInterface.h" />
     <ClInclude Include="LandSite.h" />
+    <ClInclude Include="Line.h" />
+    <ClInclude Include="Mountains.h" />
     <ClInclude Include="Sprite.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
